@@ -5,30 +5,26 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CarServiceImpl implements CarService {
 
-    private List<Car> carOnList;
+    private static List<Car> cars = new ArrayList<>();
 
-    {
-        carOnList = new ArrayList<>();
-        new Car("BMW", "White", 1999);
-        new Car("Opel", "Black", 2012);
-        new Car("Audi", "Blue", 2000);
-        new Car("Lada", "Pink", 2015);
-        new Car("Mazda", "White", 1976);
-    }
-
-
-    @Override
-    public List<Car> getListCars() {
-        return carOnList;
+    static {
+        cars.add(new Car("BMW", "White", 1999));
+        cars.add(new Car("Opel", "Black", 2012));
+        cars.add(new Car("Audi", "Blue", 2000));
+        cars.add(new Car("Lada", "Pink", 2015));
+        cars.add(new Car("Mazda", "White", 1976));
     }
 
     @Override
-    public List<Car> getCarByCount(List<Car> carList, int count) {
-        return carList.stream().limit(count).collect(Collectors.toList());
+    public List<Car> getCarByCount(int count) {
+        if (count > 0 && count < 5) {
+            return cars.stream().limit(count).toList();
+        } else {
+            return cars;
+        }
     }
 }
